--- a/_includes/jekyll_comments.html
+++ b/_includes/jekyll_comments.html
@@ -1,25 +1,31 @@
-{% include jekyll_comments_form.html %}
-{% assign comments_arr = nil | compact %}
-{% for comment_val in site.data.jekyll_comments[page.slug] %}
-  {% assign comments_arr = comments_arr | push: comment_val[1] %}
-{% endfor %}
-{% assign num_comments = comments_arr | size %}
-{% if num_comments == 1 %}
-  {% assign display_word = ' Comment' %}
-{% else %}
-  {% assign display_word = ' Comments' %}
-{% endif %}
-<h2>{{ num_comments }}{{ display_word }}</h2>
-<hr>
-<br>
-{% assign sorted_comments_arr = comments_arr | sort: 'date' | reverse %}
-{% for comment in sorted_comments_arr %}
-  <p>
-    {{ comment.name }} - {{ comment.date | date_to_string }}
-  </p>
-  <p>
-    {{ comment.message }}
-  </p>
+{% if site.jekyll_comments.show_comments %}
+
+  {% if site.jekyll_comments.allow_new_comments %}
+    {% include jekyll_comments_form.html %}
+  {% endif %}
+
+  {% assign comments_arr = nil | compact %}
+  {% for comment_val in site.data.jekyll_comments[page.slug] %}
+    {% assign comments_arr = comments_arr | push: comment_val[1] %}
+  {% endfor %}
+  {% assign num_comments = comments_arr | size %}
+  {% if num_comments == 1 %}
+    {% assign display_word = ' Comment' %}
+  {% else %}
+    {% assign display_word = ' Comments' %}
+  {% endif %}
+  <h2>{{ num_comments }}{{ display_word }}</h2>
   <hr>
   <br>
-{% endfor %}
+  {% assign sorted_comments_arr = comments_arr | sort: 'date' | reverse %}
+  {% for comment in sorted_comments_arr %}
+    <p>
+      {{ comment.name }} - {{ comment.date | date_to_string }}
+    </p>
+    <p>
+      {{ comment.message }}
+    </p>
+    <hr>
+    <br>
+  {% endfor %}
+{% endif %}
